# Horror-game-demo

./: CMakeLists.txt  DEVELOPMENT.md  QUICKSTART.md  README.md  build.sh  launch.sh
assets/: README.md
include/: AudioManager.h  Game.h  InputHandler.h  Mansion.h  Menu.h  Monster.h  Player.h  Renderer.h  TaskSystem.h
src/: AudioManager.cpp  Game.cpp  InputHandler.cpp  Mansion.cpp  Menu.cpp  Monster.cpp  Player.cpp  Renderer.cpp  TaskSystem.cpp  main.cpp
